--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -24,7 +24,6 @@
 
     a::after {
       font-family: "Biennale" !important;
-      speak: none;
       font-style: normal;
       font-weight: normal;
       font-variant: normal;
